# litecoin

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: common.init.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/test/: 00_setup_env_native_multiprocess.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: README.md  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  (+4 more)
depends/: README.md  config.guess  config.sub  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-litecoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoind.1  vuicoin-cli.1  vuicoin-qt.1  vuicoin-wallet.1  vuicoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  netaddress.h  pow.cpp  txdb.cpp
test/: README.md
(+123 files in other folders)
